# kaish

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  signoff.md
crates/kaish-client/: Cargo.toml
crates/kaish-client/src/: completion.rs  embedded.rs  ipc.rs  lib.rs  traits.rs
crates/kaish-glob/: Cargo.toml
crates/kaish-glob/src/: file_types.rs  filetype.rs  filter.rs  glob.rs  glob_path.rs  lib.rs  walker.rs
crates/kaish-help/: Cargo.toml
crates/kaish-help/content/en/: awk.md  ignore.md  limits.md  output-limit.md  overlay.md  overview.md  rg.md  scatter.md  syntax.md  timeout.md  vfs.md
crates/kaish-help/src/: compose.rs  content.rs  fragments.rs  lib.rs  topic.rs
crates/kaish-kernel/: Cargo.toml
crates/kaish-kernel/docs/help/: ignore.md  limits.md  overview.md  scatter.md  syntax.md  vfs.md
crates/kaish-kernel/examples/: gen_bash_completion.rs
crates/kaish-kernel/proptest-regressions/: kernel.txt
crates/kaish-kernel/src/: arithmetic.rs  ast.rs  backend_walker_fs.rs  dispatch.rs  glob.rs  help.rs  ignore_config.rs  interpreter.rs  kernel.rs  lexer.rs  lib.rs  nonce.rs  output_limit.rs  parser.rs  paths.rs  pidfd.rs  rpc.rs  telemetry.rs  trash.rs  trash_system.rs
crates/kaish-kernel/src/ast/: sexpr.rs  types.rs
crates/kaish-kernel/src/backend/: local.rs  mod.rs  overlay.rs  testing.rs
crates/kaish-kernel/src/interpreter/: eval.rs  result.rs  scope.rs
crates/kaish-kernel/src/mcp/: client.rs  mod.rs  tool.rs
crates/kaish-kernel/src/scheduler/: job.rs  mod.rs  pipe_stream.rs  pipeline.rs  scatter.rs  stderr_stream.rs  stream.rs
crates/kaish-kernel/src/state/: mod.rs
crates/kaish-kernel/src/tools/: clap_schema.rs  context.rs  global_flags.rs  mod.rs  registry.rs  traits.rs
crates/kaish-kernel/src/tools/builtin/: alias.rs  (+100 more)
crates/kaish-kernel/src/validator/: issue.rs  mod.rs  scope_tracker.rs  walker.rs
crates/kaish-kernel/src/vfs/: builtin_fs.rs  git.rs  jobfs.rs  local.rs  memory.rs  mod.rs  router.rs  traits.rs
crates/kaish-kernel/src/walker/: filter.rs  glob_path.rs  ignore.rs  mod.rs  walker.rs
crates/kaish-kernel/tests/: and_or_precedence_tests.rs  awk_numeric_compare_tests.rs  background_execution_tests.rs  bareword_comma_tests.rs  binary_stdin_tests.rs  binary_text_sink_tests.rs  binary_wc_tests.rs  binary_write_tests.rs  builtin_fidelity_tests.rs  builtin_kernel_tests.rs  builtin_sweep_fidelity_tests.rs  cancellation_tests.rs  cat_number_newline_tests.rs  cmdsubst_config_isolation_tests.rs  cmdsubst_data_interpolation_tests.rs  collection_access_tests.rs  collection_literals_tests.rs  collections_lvalue_tests.rs  collections_value_model_tests.rs  concurrency_tests.rs  correctness_oneoffs_tests.rs  cut_range_dedup_tests.rs  dd_xxd_seq_tests.rs  diff_json_shape_tests.rs  diff_validation_tests.rs  env_filter_tests.rs  execute_argv_tests.rs  execute_pipe_stdin_tests.rs  execute_stdin_tests.rs  export_scope_tests.rs  external_command_tests.rs  file_test_tilde_tests.rs  find_predicate_tests.rs  flag_true_literal_tests.rs  for_newline_split_tests.rs  git_tool.rs  glob_dotfile_tests.rs  glob_no_match_tests.rs  glob_pattern_passthrough_tests.rs  glob_search_features_tests.rs  (+62 more)
crates/kaish-kernel/tests/common/: mod.rs
crates/kaish-kernel/tests/snapshots/: parser_tests__bare_dotdot.snap  parser_tests__bash_function_minimal.snap  parser_tests__case_dash_alternation_pattern.snap  parser_tests__case_double_dash_pattern.snap  parser_tests__case_minus_bare_pattern.snap  parser_tests__case_plus_bare_pattern.snap  parser_tests__case_plus_flag_pattern.snap  parser_tests__case_short_flag_pattern.snap  parser_tests__case_single_dash_pattern.snap  parser_tests__case_triple_dash_pattern.snap  parser_tests__cd_dot_slash.snap  parser_tests__cd_dotdot.snap  parser_tests__cd_relative_path.snap  parser_tests__cd_tilde.snap  parser_tests__cd_tilde_path.snap  parser_tests__colon_cargo_test.snap  parser_tests__colon_double.snap  parser_tests__colon_port.snap  parser_tests__dot_slash_exec.snap  parser_tests__double_dash_ends_flags.snap  parser_tests__false_in_condition.snap  parser_tests__glob_bare_question.snap  parser_tests__glob_bare_star.snap  parser_tests__glob_bracket_class.snap  parser_tests__glob_cp_mixed.snap  parser_tests__glob_double_star.snap  parser_tests__glob_for_loop.snap  parser_tests__glob_in_case.snap  parser_tests__glob_in_named_arg.snap  parser_tests__glob_in_test.snap  parser_tests__glob_question_mark.snap  parser_tests__glob_quoted_literal.snap  parser_tests__glob_star_txt.snap  parser_tests__if_command_condition.snap  parser_tests__if_command_or_test.snap  parser_tests__if_command_with_args.snap  parser_tests__if_comparison.snap  parser_tests__if_else.snap  parser_tests__if_simple.snap  parser_tests__if_test_and_command.snap  (+35 more)
crates/kaish-mcp/: Cargo.toml
crates/kaish-mcp/src/: client.rs  lib.rs  main.rs  wrapper.rs
crates/kaish-mcp/src/server/: config.rs  execute.rs  handler.rs  mod.rs  prompts.rs  resources.rs
crates/kaish-mcp/tests/: edge_cases.rs  self_test.rs  stress_test.rs  trace_context_tests.rs
crates/kaish-repl/: Cargo.toml  build.rs
crates/kaish-repl/src/: format.rs  lib.rs  main.rs
crates/kaish-repl/tests/: cli_stdin_tests.rs  integration.rs  pty_job_control.rs  script_integration.rs  script_shebang_tests.rs
crates/kaish-schema/: Cargo.toml  build.rs
crates/kaish-schema/schema/: kaish.capnp
crates/kaish-schema/src/: kaish_capnp.rs  lib.rs
crates/kaish-tool-api/: Cargo.toml
crates/kaish-tool-api/src/: backend.rs  clap_schema.rs  ctx.rs  global_flags.rs  issue.rs  lib.rs  tool.rs
crates/kaish-tools-git/: Cargo.toml
crates/kaish-tools-git/src/: git_tool.rs  git_vfs.rs  lib.rs
crates/kaish-tools-host/: Cargo.toml
crates/kaish-tools-host/src/: lib.rs  ps.rs
crates/kaish-types/: Cargo.toml
crates/kaish-types/src/: backend.rs  bytes.rs  clock.rs  command.rs  dir_entry.rs  job.rs  kernel.rs  lib.rs  output.rs  result.rs  tool.rs  value.rs
crates/kaish-vfs/: Cargo.toml
crates/kaish-vfs/src/: budget.rs  dev.rs  lib.rs  local.rs  memory.rs  overlay.rs  paths.rs  traits.rs
(+79 files in other folders)
