[workspace]
resolver = "2"
members = [
    "crates/kaish-glob",
    "crates/kaish-types",
    "crates/kaish-help",
    "crates/kaish-tool-api",
    "crates/kaish-vfs",
    "crates/kaish-tools-git",
    "crates/kaish-tools-host",
    "crates/kaish-kernel",
    "crates/kaish-mcp",
    "crates/kaish-client",
    "crates/kaish-repl",
    "crates/kaish-wasi",
]

[workspace.package]
version = "0.8.4"
edition = "2024"
rust-version = "1.85"
authors = ["Amy Tobey <tobert@gmail.com>"]
description = "kaish (会sh) — a predictable shell for MCP tool orchestration"
license = "MIT"
homepage = "https://github.com/tobert/kaish"
repository = "https://github.com/tobert/kaish"
keywords = ["shell", "mcp", "ai", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.32"

# Lexer/Parser (L1-L2)
logos = "0.16"
chumsky = "1.0.0-alpha.8"
ariadne = "0.6"

# CLI arg parsing (used inside builtins via the clap-migration recipe)
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# REPL (L4)
rustyline = "17"

# Base64 encoding/decoding
base64 = "0.22"

# OS CSPRNG for mktemp's random suffixes (supports wasm32-wasip1)
getrandom = "0.3"

# Cryptographic hashing
digest = "0.10"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"

# Pattern matching (grep)
regex = "1"

# ripgrep family — the `grep` builtin's search engine and the walker's
# type-filter system. `ignore` provides `Types` (path-name matching, no I/O)
# and gitignore parsing.
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
bstr = "1"

# Text diffing
similar = "2"

# Git operations
git2 = "0.20"

# Date/time (date)
chrono = "0.4"
chrono-tz = "0.10"

# jq (native implementation via jaq v2)
jaq-core = "2.2"
jaq-std = "2.1"
jaq-json = "1.1"

# MCP (rmcp)
rmcp = { version = "0.16", default-features = false }

# Async utilities
tokio-util = { version = "0.7", features = ["compat"] }

# XDG paths
directories = "5"

# Trash (freedesktop.org)
trash = "5"

# Process information (Linux)
procfs = "0.18"

# Token counting (BPE tokenization)
tiktoken-rs = "0.9"

# Testing
proptest = "1"
rstest = "0.26"
insta = "1.46"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
