[workspace]
resolver = "2"
members = [
    "crates/kaish-glob",
    "crates/kaish-types",
    "crates/kaish-help",
    "crates/kaish-tool-api",
    "crates/kaish-vfs",
    "crates/kaish-tools-host",
    "crates/kaish-kernel",
    "crates/kaish-client",
    "crates/kaish-repl",
    "crates/kaish-wasi",
]

[workspace.package]
version = "0.11.0"
edition = "2024"
rust-version = "1.85"
authors = ["Amy Tobey <tobert@gmail.com>"]
description = "kaish (会sh) — an embeddable shell for AI agents: familiar syntax, strong validation, and clear errors"
license = "MIT"
homepage = "https://github.com/tobert/kaish"
repository = "https://github.com/tobert/kaish"
keywords = ["shell", "ai", "agent", "embeddable", "repl"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
# preserve_order: objects keep insertion order (IndexMap) instead of sorting
# keys — matches jq/jaq output and keeps `jq keys_unsorted` honest.
serde_json = { version = "1", features = ["preserve_order"] }

# Logging / Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"

# Lexer/Parser (L1-L2)
logos = "0.16"
chumsky = "0.13"
ariadne = "0.6"

# CLI arg parsing (used inside builtins via the clap-migration recipe)
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# REPL (L4)
rustyline = "17"

# Base64 encoding/decoding
base64 = "0.22"

# OS CSPRNG for mktemp's random suffixes (supports wasm32-wasip1)
getrandom = "0.3"

# Cryptographic hashing
digest = "0.10"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"

# Pattern matching (grep)
regex = "1"

# Content-based file-type detection (magic bytes) — pure Rust, no C deps.
# `default-features = false` drops the `cfb` matcher (legacy MS Office
# .doc/.xls, which also pulls in byteorder/uuid) — outside kaish's 80% and
# not worth the transitive deps; `alloc` keeps every image/audio/archive
# matcher we actually use.
infer = { version = "0.19", default-features = false, features = ["alloc"] }

# ripgrep family — the `grep` builtin's search engine and the walker's
# type-filter system. `ignore` provides `Types` (path-name matching, no I/O)
# and gitignore parsing.
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
bstr = "1"

# Text diffing
similar = "2"

# Date/time (date)
chrono = "0.4"
chrono-tz = "0.10"

# jq (native implementation via jaq v3)
jaq-core = "3.1"
jaq-std = "3.0"
jaq-json = "2.0"

# Async utilities
tokio-util = { version = "0.7", features = ["compat"] }

# XDG paths
directories = "5"

# Trash (freedesktop.org)
trash = "5"

# Process information (Linux)
procfs = "0.18"

# Token counting (BPE tokenization)
tiktoken-rs = "0.9"

# Testing
proptest = "1"
rstest = "0.26"
insta = "1.46"
tempfile = "3"

# Optimize the interpreter crate (and its pure-data leaf) even in debug/test
# builds. Unoptimized `async fn` poll frames are ~proportional to future size
# with redundant memcpys between suspend points; opt-level=1 collapses them
# (measured ~5–10× on the recursive ring). That directly cuts the native
# stack-per-recursion-level cost that sets `RECOMMENDED_STACK_SIZE` /
# `MAX_RECURSION_DEPTH` (GH #46/#47) and is the baseline the #48 pass optimizes
# against. opt-level=1 keeps `debug_assertions` and most debuginfo, and speeds
# the test suite as a bonus. Only these two crates carry the interpreter's hot
# futures, so the compile-time cost is contained.
[profile.dev.package.kaish-kernel]
opt-level = 1

[profile.dev.package.kaish-types]
opt-level = 1

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
