[package]
name = "kaish-client"
description = "Client implementations for connecting to kaish kernels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
kaish-kernel = { path = "../kaish-kernel", version = "0.1.7" }
kaish-schema = { path = "../kaish-schema", version = "0.1.7" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# JSON
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Cap'n Proto RPC (for IpcClient)
capnp = { workspace = true }
capnp-rpc = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
