[package]
name = "kaish-client"
description = "Client implementations for connecting to kaish kernels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
# Feature-neutral on purpose: the embedder decides the kernel's feature set
# (kaish-web builds no-default for wasm; native hosts add localfs etc.).
# Unification means enabling defaults here would trample that choice.
kaish-kernel = { path = "../kaish-kernel", version = "0.13.0", default-features = false }
kaish-types = { path = "../kaish-types", version = "0.13.0" }

# Async traits only — no runtime: the library spawns nothing itself, and a
# tokio dep here would drag net/mio into wasm builds (kaish-extras).
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# JSON
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
# The runtime dep above is feature-neutral; tests assert localfs-flavored
# behavior (transient() cwd=$HOME) and must say so themselves — without
# this, `cargo test -p kaish-client` alone sees a no-localfs kernel while a
# whole-workspace run gets localfs unified in by the REPL, and outcomes
# depend on which crates happened to build.
kaish-kernel = { path = "../kaish-kernel", version = "0.13.0", features = ["localfs"] }
proptest = { workspace = true }
# Tests drive the async client API; the library itself needs no runtime —
# and must not pull one in: wasm builds (kaish-extras) break on tokio/net.
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
