[package]
name = "kaish-glob"
description = "Glob matching and async file walking with gitignore support"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
