[package]
name = "kaish-glob"
description = "Glob matching and async file walking with gitignore support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
# `Types`/`TypesBuilder` for the `-tjs`-style filename filter, plus
# gitignore parsing for the global / parent-walk-up paths. Pure
# path-name matching is used here; no real-FS calls.
ignore = { workspace = true }
# Content-based file-type detection (magic bytes) for the `filetype` module.
# Pure Rust, zero transitive deps — keeps the crate hermetic.
infer = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
