[package]
name = "kaish-help"
description = "Composable help & instructions content for kaish — shared by the kernel, REPL, MCP server, and embedders"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
kaish-types = { path = "../kaish-types", version = "0.13.0" }

[lints]
workspace = true
