[package]
name = "kaish-kernel"
description = "Core kernel for kaish: lexer, parser, interpreter, and runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
exclude = ["tests/snapshots/"]

[dependencies]
kaish-glob = { path = "../kaish-glob", version = "0.5.0" }
kaish-types = { path = "../kaish-types", version = "0.5.0", features = [] }

# Async runtime — minimal features; native adds process/fs/rt-multi-thread/signal
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "io-util"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Optional: JSON Schema generation (used by MCP server for outputSchema)
schemars = { version = "1", optional = true }

# Logging
tracing = { workspace = true }

# Lexer/Parser
logos = { workspace = true }
chumsky = { workspace = true }
ariadne = { workspace = true }

# Builtins (pure-Rust, always available)
base64 = { workspace = true }
digest = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
similar = { workspace = true }

# jq (native implementation via jaq v2)
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true }

# Optional OS-specific deps (gated behind "native" feature)
git2 = { workspace = true, optional = true }
trash = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
tiktoken-rs = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "term"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true, optional = true }

[features]
default = ["native"]
native = [
    "dep:git2", "dep:trash", "dep:directories", "dep:tiktoken-rs",
    "dep:nix", "dep:procfs",
    "tokio/process", "tokio/fs", "tokio/rt-multi-thread", "tokio/signal",
]
schema = ["dep:schemars", "kaish-types/schema"]

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
