[package]
name = "kaish-kernel"
description = "Core kernel for kaish: lexer, parser, interpreter, and runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
exclude = ["tests/snapshots/"]

[dependencies]
kaish-glob = { path = "../kaish-glob", version = "0.8.4" }
kaish-types = { path = "../kaish-types", version = "0.8.4", features = [] }
kaish-help = { path = "../kaish-help", version = "0.8.4" }
kaish-tool-api = { path = "../kaish-tool-api", version = "0.8.4" }
kaish-vfs = { path = "../kaish-vfs", version = "0.8.4", features = ["memory", "overlay"] }

# Async runtime — minimal base; `localfs` adds tokio/fs, `subprocess` adds
# tokio/process + tokio/rt-multi-thread (see [features]).
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "io-util"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Optional: JSON Schema generation (used by MCP server for outputSchema)
schemars = { version = "1", optional = true }

# Logging / Telemetry. opentelemetry + its SDK propagators turn the
# embedder-supplied W3C trace context on ExecuteOptions into an OTel Context
# that the execution span parents onto. See src/telemetry.rs.
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
# Bridge to read the active tracing span's OTel context at fork-spawn sites, so
# forked work nests under the foreground execute span (not the remote parent).
tracing-opentelemetry = { workspace = true }

# Lexer/Parser
logos = { workspace = true }
chumsky = { workspace = true }
ariadne = { workspace = true }

# CLI parsing inside builtins — see docs/clap-migration.md
clap = { workspace = true }

# Builtins (pure-Rust, always available)
base64 = { workspace = true }
getrandom = { workspace = true }
digest = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
similar = { workspace = true }

# ripgrep family — `ignore` provides global-gitignore lookup + file walking;
# `grep-*` / `bstr` back the search engine inside the `grep` builtin.
ignore = { workspace = true }
grep-searcher = { workspace = true }
grep-regex = { workspace = true }
grep-matcher = { workspace = true }
bstr = { workspace = true }

# jq (native implementation via jaq v2)
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true }

# Optional deps, each pulled in by its capability feature:
#   kaish-tools-git → git, trash/directories → os-integration,
#   tiktoken-rs → tokens. libgit2 now lives entirely in kaish-tools-git.
kaish-tools-git = { path = "../kaish-tools-git", version = "0.8.4", optional = true }
kaish-tools-host = { path = "../kaish-tools-host", version = "0.8.4", optional = true }
trash = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
tiktoken-rs = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "term"], optional = true }

[features]
# Default is the minimal "on-the-fly text processing" surface: real-file I/O
# through the backend, but NO process execution, host introspection, git,
# desktop integration, or tokenizer. Each of those is an opt-in capability so
# the dangerous surface is named, not inherited. Read-only-ness is a runtime
# backend mode on top of this, not a missing feature.
default = ["localfs", "overlay"]

# Real local filesystem: LocalFs backend, passthrough/sandboxed VFS mount modes,
# and output spill-to-disk. Off → in-memory/VFS only (the wasm32-wasip1 sandbox).
localfs = ["tokio/fs", "kaish-vfs/localfs"]

# Copy-on-write overlay filesystem: wraps a LocalFs lower layer so writes are
# virtual. Needs localfs for the lower layer. kaish-vfs/overlay is always enabled
# in the dep above; this feature gates the kernel-side wiring.
overlay = ["localfs", "kaish-vfs/overlay"]

# External process execution + job control: exec/spawn/which/bg/fg/kill, PATH
# resolution, OS signals, controlling-terminal job control, pidfd. The single
# largest attack-surface axis. Implies localfs (external output is spill-collected
# and children run against real paths).
subprocess = ["localfs", "dep:nix", "tokio/process", "tokio/rt-multi-thread"]

# Host/OS introspection. `ps` (procfs) lives in kaish-tools-host; `uname
# --host` and `hostname` read /proc with std::fs and stay in the kernel,
# gated by this feature.
host = ["dep:kaish-tools-host"]

# git builtin + GitVfs backend, both in the kaish-tools-git crate (libgit2, a
# C dependency, never enters the kernel build).
git = ["localfs", "dep:kaish-tools-git"]

# Desktop/OS integration: freedesktop trash + XDG base directories.
os-integration = ["localfs", "dep:trash", "dep:directories"]

# BPE tokenization (the `tokens` builtin; embeds tiktoken data).
tokens = ["dep:tiktoken-rs"]

# Everything — the full native surface (what the old monolithic `native` was).
full = ["localfs", "overlay", "subprocess", "host", "git", "os-integration", "tokens"]
# Ergonomic alias for the REPL/CLI and muscle memory; not a compatibility shim.
native = ["full"]

schema = ["dep:schemars", "kaish-types/schema"]

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
# `test-util` enables the paused clock (`start_paused`/`advance`) the
# watchdog unit tests use for deterministic deadline math.
tokio = { version = "1", features = ["test-util"] }
proptest = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
# Used by examples/gen_bash_completion.rs to generate contrib/echo.bash.
clap_complete = { workspace = true }
# Trace-context integration test: an in-memory OTel exporter to assert the
# execution span parents onto a supplied traceparent. `testing` adds
# InMemorySpanExporter. (tracing-opentelemetry is a normal dependency above.)
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
