[package]
name = "kaish-mcp"
description = "MCP client and server integration for kaish"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "kaish-mcp"
path = "src/main.rs"

[dependencies]
kaish-kernel = { path = "../kaish-kernel", version = "0.2.1" }
rmcp = { version = "0.15", default-features = true, features = [
    "client", "transport-child-process", "server", "transport-io", "macros",
] }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
notify = "8"
toml = "0.9"
base64 = "0.22"
directories = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
