[package]
name = "kaish-mcp"
description = "MCP server for kaish"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "kaish-mcp"
path = "src/main.rs"

[dependencies]
# The general MCP server preserves the full shell surface today; the planned
# read-only MCP agent will instead take the minimal default (localfs only).
kaish-kernel = { path = "../kaish-kernel", version = "0.8.1", features = ["schema", "full"] }
rmcp = { workspace = true, features = [
    "server", "transport-io", "macros",
] }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
clap = { version = "4", features = ["derive"] }
notify = "8"
toml = "0.9"
base64 = "0.22"
directories = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
# Trace-context propagation test: in-memory OTel exporter (`testing`) + the
# tracing-opentelemetry bridge to assert the kernel span parents onto a
# traceparent forwarded from the MCP request `_meta`.
opentelemetry_sdk = { workspace = true, features = ["testing"] }

[lints]
workspace = true
