[package]
name = "kaish-repl"
description = "Interactive REPL for kaish (会sh)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "kaish"
path = "src/main.rs"

[dependencies]
kaish-kernel = { path = "../kaish-kernel", version = "0.1.6" }
kaish-client = { path = "../kaish-client", version = "0.1.6" }

# Line editing
rustyline = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# XDG paths
directories = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Terminal colors and sizing
owo-colors = "4"
terminal_size = "0.4"

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
