[package]
name = "kaish-repl"
description = "Interactive REPL for kaish (会sh)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "kaish"
path = "src/main.rs"

[dependencies]
# The REPL is the full interactive human shell: it needs every capability
# (external commands + job control, git, host introspection, tokens, trash).
kaish-kernel = { path = "../kaish-kernel", version = "0.11.0", features = ["full"] }
kaish-client = { path = "../kaish-client", version = "0.11.0" }

# Line editing
rustyline = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# XDG paths
directories = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Terminal colors and sizing
owo-colors = "4"
terminal_size = "0.4"

# Display-width-aware column alignment (CJK/emoji are wider than 1 byte/col)
unicode-width = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["term", "signal", "process"] }

[build-dependencies]
chrono = { workspace = true }

[lints]
workspace = true
