[package]
name = "kaish-schema"
description = "Cap'n Proto schema definitions for kaish kernel protocol"
version = "0.1.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
capnp = { workspace = true }

[features]
codegen = ["dep:capnpc"]

[build-dependencies]
capnpc = { workspace = true, optional = true }

[lints]
workspace = true
