[package]
name = "kaish-tools-host"
description = "kaish host-introspection tool bundle: the ps builtin (procfs)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kaish-types = { path = "../kaish-types", version = "0.9.1", features = [] }
kaish-tool-api = { path = "../kaish-tool-api", version = "0.9.1" }

async-trait = { workspace = true }
clap = { workspace = true }

# procfs is Linux-only; `ps` is gated to Linux to match.
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }

[lints]
workspace = true
